concordium-std/tests/derive-deserial-with-state/fail-tag-without-repr.stderr
error: 'repr(..)' attribute must be set on the type when using 'tag' attribute
 --> tests/derive-deserial-with-state/fail-tag-without-repr.rs:5:10
  |
5 | #[derive(DeserialWithState)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserialWithState` (in Nightly builds, run with -Z macro-backtrace for more info)
